--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 body, html {
     background-image: url('e.png');
     background-position-y: 0%; 
-    background-size: cover;
+    background-size: 100% 450px;
     background-repeat: no-repeat;
     background-color: black 
+    
     
     
 }
@@ -24,4 +25,24 @@ body, html {
     color: white;
     background-color: black;
     
+}
+.test1{
+    position: absolute;
+    text-align: center;
+    left:50%;
+    top: 550px;
+    color: rgb(184, 184, 184);
+    transform: translate(-50%, -50%);
+    background-color: black;
+    font-size: 20px;
+}
+.header1{
+    position: absolute;
+    text-align: center;
+    left:50%;
+    top: 500px;
+    color: rgb(255, 255, 255);
+    transform: translate(-50%, -50%);
+    background-color: black;
+    font-size: 30px;
 }
