--- a/style.css
+++ b/style.css
@@ -1,9 +1,6 @@
 body, html {
-    background-image: url('e.png');
     background-position-y: 0%; 
-    background-size: 100% 450px;
-    background-repeat: no-repeat;
-    background-color: black 
+    background-color: rgb(0, 0, 0);
     
     
     
@@ -17,6 +14,7 @@ body, html {
     color: rgb(255, 255, 255);
     transform: translate(-50%, -50%);
     background-color: black;
+    font-family: arial;
 
 
 
@@ -52,7 +50,7 @@ body, html {
 }
 .rect1{
     position: absolute;
-    top: 525px;
+    top: 550px;
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
@@ -70,21 +68,59 @@ body, html {
     position: absolute;
     text-align: center;
     left:50%;
-    top: 750px;
-    color: rgb(184, 184, 184);
+    top: 760px;
+    color: rgb(255, 255, 255);
     transform: translate(-50%, -50%);
 
-    font-size: 20px;
+    font-size: 15px;
     z-index: 1;
 }
 .header2{
     position: absolute;
     text-align: center;
     left:50%;
-    top: 700px;
+    top: 710px;
+    color: rgb(255, 255, 255);
+    transform: translate(-50%, -50%);
+    word-break: 350px;
+    width: 350px;
+    font-size: 23px;
+    z-index: 1;
+}
+.header3{
+    position: absolute;
+    text-align: center;
+    left:50%;
+    top: 220px;
     color: rgb(255, 255, 255);
     transform: translate(-50%, -50%);
 
     font-size: 25px;
     z-index: 1;
+}
+.rect122{
+    position: absolute;
+    top: 300px;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    z-index: 0;
+}
+.test112{
+    position: absolute;
+    text-align: center;
+    left:50%;
+    top: 350px;
+    color: rgb(255, 255, 255);
+    transform: translate(-50%, -50%);
+    word-wrap: break-word;
+    width: 350px;
+    font-size: 13px;
+    z-index: 1;
+}
+.ifraame{
+    position: relative;
+    top: 1000px;
+    left: 50%;
+
 }
